@@ -55,10 +55,12 @@ class TestHandler(EventHandler):
     def ev_read(self, worker):
         self.did_read = True
         assert worker.last_read() == "abcdefghijklmnopqrstuvwxyz"
+        assert worker.last_error() != "abcdefghijklmnopqrstuvwxyz"
 
     def ev_error(self, worker):
         self.did_readerr = True
         assert worker.last_error() == "errerrerrerrerrerrerrerr"
+        assert worker.last_read() != "errerrerrerrerrerrerrerr"
 
     def ev_close(self, worker):
         self.did_close = True
